# ZirkMarcenariaERP

./: .env  .gitignore  Funcionario_Bernardo Vieira Gomes.xlsx  criar_admin.py  db.sqlite3  gerar_dados_teste.py  manage.py  pyproject.toml  requirements.txt
apps/analytics/: apps.py  services.py  signals.py  urls.py  views.py
apps/banco_horas/: apps.py  forms.py  models.py  urls.py  views.py
apps/banco_horas/migrations/: 0001_initial.py  0002_lancamentohoras.py  0003_remove_lancamentohoras_motivo.py  0004_bancohoras_deleted_at_bancohoras_is_deleted.py  0005_lancamentohoras_deleted_at_and_more.py  0006_lancamentohoras_valor_hora.py  0007_lancamentohoras_descricao_alter_lancamentohoras_data.py
apps/clientes/: forms.py  models.py  urls.py  views.py
apps/clientes/migrations/: 0001_initial.py  0002_alter_cliente_cpf.py  (+5 more)
apps/comissionamento/: apps.py  forms.py  models.py  urls.py  views.py
apps/configuracoes/: admin.py  apps.py  context_processors.py  forms.py  mixin.py  models.py  urls.py  views.py
apps/dashboard/: admin.py  forms.py  models.py  urls.py  views.py
apps/docs/: urls.py  views.py
apps/empreitadas/: apps.py  forms.py  models.py  urls.py  views.py
apps/ferias/: admin.py  apps.py  forms.py  models.py  service.py  services.py  signals.py  urls.py  views.py
apps/financeiro/: utils.py
apps/funcionarios/: admin.py  forms.py  models.py  services.py  urls.py  views.py
apps/relatorios/: extensions.py  urls.py  views.py
apps/rescisao/: apps.py  forms.py  models.py  services.py  signals.py  urls.py  views.py
apps/socios/: admin.py  forms.py  models.py  services.py  urls.py  views.py
config/: middleware.py  settings.py  urls.py  wsgi.py
static/core/: ferias.css  style.css
staticfiles/core/: style.css
templates/core/: base.html  dashboard.html  dashboard_modular.html  login.html
(+267 files in other folders)
